# simple-calculator-python

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  main.py  nose2.cfg  pyproject.toml  pytest_calculator.py  pyvenv.cfg  requirements.txt  test_calculator.py  test_nose_calc.py
.github/workflows/: docker-compose-and-sast.yaml
Scripts/: activate  activate.bat  activate.fish
src/simple_calculator/: __init__.py  main.py
src/simple_calculator/static/: index.html
static/: index.html
tests/: pytest_calculator.py  test_calculator.py  test_nose_calc.py
