[project]
name = "simple_calculator"
version = "1.0.0"
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Mircea Constantin", email="mircea_constantin58@yahoo.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mklmfane/simple-calculator-python"
Issues = "https://github.com/mklmfane/simple-calculator-python/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
